# supplies

./: .gitignore  devbox.json  process-compose.yml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: backend.yml
backend/: .gitignore  alembic.ini  pyproject.toml
backend/apps/models/: access_token.py  category.py  group.py  group_user.py  image.py  item.py  refresh_token.py  transaction.py  user.py
backend/scripts/: generate_erd.sh  generate_openapi.sh  generate_redoc.sh
